<resources>
    <string name="app_name">In Class 3</string>
    <string name="action_settings">Settings</string>
    <string name="first_activity_name">Main Activity</string>
    <string name="student_name">Name</string>
    <string name="student_email">Email</string>
    <string name="fav_prog_tv">Favorite Programming Language:</string>
    <string name="rb_java">Java</string>
    <string name="rb_C">C</string>
    <string name="rb_CSharp">C#</string>
    <string name="account_searchable">Account is searchable:</string>
    <string name="tv_mood">Your current mood :</string>
    <string name="btn_submit">Submit</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="prog_lan">Prog.Language:</string>
    <string name="acct_state">Account State</string>
    <string name="mood">mood</string>
    <string name="title_activity_edit_activity_name">EditActivityName</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_edit_activitye_mail">EditActivityeMail</string>
    <string name="title_activity_edit_activity_language">EditActivityLanguage</string>
    <string name="title_activity_edit_activity__act_state">EditActivity_ActState</string>
    <string name="title_activity_edit_activitymood">EditActivitymood</string>
</resources>
