<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.medha.inclass3.DisplayActivity"
    tools:showIn="@layout/activity_display">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/student_name"
            android:id="@+id/textView_name_da" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout9"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/student_email"
            android:id="@+id/textView_email_da" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout11"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout12"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/linearLayout11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prog_lan"
            android:id="@+id/textView_proglan" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout13"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/acct_state"
        android:id="@+id/textView4"
        android:layout_below="@+id/linearLayout13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout14"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mood"
            android:id="@+id/textView5" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_displayName"
        android:layout_above="@+id/linearLayout9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_displayEmail"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/linearLayout10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_displayLanguage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_displayactst"
        android:layout_below="@+id/linearLayout13"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_mood"
        android:layout_alignBottom="@+id/linearLayout15"
        android:layout_alignLeft="@+id/textView_displayactst"
        android:layout_alignStart="@+id/textView_displayactst"
        android:layout_below="@+id/linearLayout14" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_Name"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_alignBottom="@+id/linearLayout9"
        android:layout_alignRight="@+id/linearLayout9"
        android:layout_alignEnd="@+id/linearLayout9"
        android:contentDescription="Image"
        android:clickable="true"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_email"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="Image"
        android:clickable="true"
        android:layout_below="@+id/imageView_Name"
        android:layout_alignLeft="@+id/imageView_Name"
        android:layout_alignStart="@+id/imageView_Name"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:longClickable="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_proglan"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="Image"
        android:clickable="true"
        android:layout_alignTop="@+id/linearLayout11"
        android:layout_alignLeft="@+id/imageView_email"
        android:layout_alignStart="@+id/imageView_email"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_AccountState"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="Image"
        android:clickable="true"
        android:layout_below="@+id/linearLayout12"
        android:layout_alignLeft="@+id/imageView_proglan"
        android:layout_alignStart="@+id/imageView_proglan"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_mood"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="Image"
        android:clickable="true"
        android:layout_alignTop="@+id/linearLayout14"
        android:layout_alignRight="@+id/linearLayout14"
        android:layout_alignEnd="@+id/linearLayout14"
        android:layout_marginTop="10dp" />

</RelativeLayout>
